--- a/home.html
+++ b/home.html
@@ -64,6 +64,7 @@
                         </p>
                     </div>
                     <div>
+                        <!-- images -->
                         <img src="images/my.jpg" alt="My photo" class="img-left" />
                     </div>
                     <div>
